[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state_updater"
path = "src/bin/state_updater.rs"

[dependencies]
alloy-primitives = { git = "https://github.com/alloy-rs/core", branch = "main" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core", branch = "main" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.18", default-features = false, features = ["std"] }

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
